objects/Fee_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Commision__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Partner gets different commission based on different selling price ranges.</description>
        <label>Commission</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>It&apos;s picklist field to store the deal type . Distribution fee vary for different deal type.</description>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It&apos;s a fixed fee for partner . It depend on partner role and deal Type.</description>
        <label>Fixed Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxFit_Reduction__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It&apos;s being used to reduce the amount from the Partner Commision if partner opt for MaxFit in the state.</description>
        <label>MaxFit Reduction</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Module_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to module for Module based pricing.</description>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>Fees Distribution</relationshipLabel>
        <relationshipName>Fees_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Every Fee Distributuin should be associated</description>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fees Distribution</relationshipLabel>
        <relationshipName>Fees_Distribution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <description>Its a field to define a partner role . Partner&apos;s Fee structure can be different based on his role in the deal</description>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>TPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>It&apos;s a field to show the Rank of the ranges on Fee distribution object</description>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Max__c</fullName>
        <description>It&apos;s a field to store the max of selling price.</description>
        <label>Selling Price Max</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Min__c</fullName>
        <description>It&apos;s a field to define the Min of selling price range.</description>
        <label>Selling Price Min</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Split_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this is created to  tell what percentage of sold price- minimum price should be given to dealer</description>
        <label>Split Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Defined states on Fee distribution for state based pricing</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fee Distribution</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Fee Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SP_Max_should_be_greater_than_Min</fullName>
        <active>true</active>
        <description>Selling price Max values should be greater than min for  well defined range.</description>
        <errorConditionFormula>Selling_Price_Min__c  &gt;  Selling_Price_Max__c</errorConditionFormula>
        <errorMessage>Selling Price Max value must be greater than Selling Price Min value.</errorMessage>
    </validationRules>
</CustomObject>